--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,2 @@
-Suara Ayomide <aysuarex@gmail.com>
-Bamidele Adefolaju <bamideleadefolaju@gmail.com>
+Mustapha Sodiq Abubakar <mustaphasodiq.hafiz@gmail.com>
+Abel Bekele <abelbekele@gmail.com>
